--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
-
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.building.ffmpegplayer"
         minSdk 21
-        targetSdk 30
+        targetSdk 29
         versionCode 1
         versionName "1.0"
 
